@@ -10,11 +10,17 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 use lib "$ENV{ACE_ROOT}/bin";
 use PerlACE::Run_Test;
 
-$file = PerlACE::LocalFile ("test.ior");
+$filebase = "test.ior";
+$file = PerlACE::LocalFile ("$filebase");
 
 unlink $file;
 
+if (PerlACE::is_vxworks_test()) {
+$SV = new PerlACE::ProcessVX ("server", "-o $filebase");
+}
+else {
 $SV = new PerlACE::Process ("server", "-o $file");
+}
 $CL = new PerlACE::Process ("client", "-k file://$file");
 
 $status = 0;
@@ -36,7 +42,7 @@ if ($client != 0) {
     $status = 1;
 }
 
-$server = $SV->WaitKill (5);
+$server = $SV->WaitKill (15);
 
 if ($server != 0) {
     print STDERR "ERROR: server returned $server\n";
